Bug 1162450
The Z-index issue is resolved such that the map box doesn't overlap with other modal

--- a/remo/base/static/base/css/mapbox.css
+++ b/remo/base/static/base/css/mapbox.css
@@ -76,7 +76,7 @@
 .leaflet-top,
 .leaflet-bottom {
 	position: absolute;
-	z-index: 1000;
+	z-index: 10;
 	pointer-events: none;
 	}
 .leaflet-top {
